--- a/frontend/src/components/AIchat/ChatApp.module.css
+++ b/frontend/src/components/AIchat/ChatApp.module.css
@@ -7,13 +7,24 @@
   position: relative;
   top: 0;
   font-family: Arial, sans-serif;
+  transition: background-color 0.3s ease, color 0.3s ease; /* 添加过渡效果 */
+}
+
+.chatContainerLight {
+  width: 400px;
+  background-color: #ffffff;
+  color: #000000;
+  border-top: 1px solid #c5c5c5;
+  padding: 10px;
+  position: relative;
+  top: 0;
+  font-family: Arial, sans-serif;
+  transition: background-color 0.3s ease, color 0.3s ease; /* 添加过渡效果 */
 }
 
 .header {
   text-align: center;
-  border-bottom: 1px solid #333;
   padding-bottom: 10px;
-  margin-bottom: 10px;
   font-size: 16px;
 }
 
@@ -22,6 +33,19 @@
   overflow-y: auto;
   background-color: #1e1e1e;
   border: 1px solid #333;
+  padding: 10px;
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.chatWindowLight {
+  height: 300px;
+  overflow-y: auto;
+  background-color: #ffffff;
+  border: 1px solid #c5c5c5;
   padding: 10px;
   margin-bottom: 10px;
   display: flex;
@@ -44,9 +68,21 @@
   align-self: flex-end;
 }
 
+.userLight {
+  background-color: #eeeeee;
+  color: #252525;
+  align-self: flex-end;
+}
+
 .assistant {
   background-color: #444;
   color: #ffffff;
+  align-self: flex-start;
+}
+
+.assistantLight {
+  background-color: #eeeeee;
+  color: #252525;
   align-self: flex-start;
 }
 
@@ -63,11 +99,29 @@
   outline: none;
 }
 
+.inputLight {
+  flex: 1;
+  padding: 8px;
+  background-color: #d8d8d8;
+  color: #000000;
+  border: 1px solid #bababa;
+  outline: none;
+}
+
 .button {
   padding: 8px 12px;
   margin-left: 5px;
   background-color: #555;
   color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+.buttonLight {
+  padding: 8px 12px;
+  margin-left: 5px;
+  background-color: #d3d3d3;
+  color: #000000;
   border: none;
   cursor: pointer;
 }
