--- a/frontend/src/components/PostDetail.module.css
+++ b/frontend/src/components/PostDetail.module.css
@@ -10,6 +10,22 @@
   /* 隐藏滚动条 */
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE 10+ */
+  transition: color 0.3s ease, color 0.3s ease; /* 添加过渡效果 */
+}
+
+.detailContainerLight {
+  padding: 2%;
+  flex: 1;
+  background-color: #ffffff;
+  color: #000000;
+  height: 100vh;
+  padding-top: 50px;
+  overflow-y: scroll; /* 保持滚动功能 */
+  border-radius: 3%;
+  /* 隐藏滚动条 */
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+  transition: color 0.3s ease, color 0.3s ease; /* 添加过渡效果 */
 }
 
 .backButton {
@@ -22,10 +38,27 @@
   border: none;
   cursor: pointer;
   border-radius: 5px;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease;
+}
+
+.backButtonLight {
+  position: relative;
+  top: -10px;
+  left: -10px;
+  margin-bottom: 0 px;
+  padding: 0px 10px;
+  color: rgb(0, 0, 0);
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: all 0.3s ease;
 }
 
 .backButton:hover {
+  color: #0056b3;
+}
+
+backButtonLight:hover {
   color: #0056b3;
 }
 
@@ -56,12 +89,30 @@
   font-size: 16px;
 }
 
+.forwardPostHeaderLight {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 8px;
+  color: #000000;
+  font-size: 16px;
+}
+
 .postHeader {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 8px;
   color: #ffffff;
+  font-size: 13px;
+}
+
+.postHeaderLight {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 8px;
+  color: #000000;
   font-size: 13px;
 }
 
@@ -87,6 +138,15 @@
   object-fit: cover; /* 裁剪图片以适应容器 */
   background-color: #fffefe; /* 透明 */
 }
+
+.forwardAvatarLight {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%; /* 圆形头像 */
+  object-fit: cover; /* 裁剪图片以适应容器 */
+  background-color: #000000; /* 透明 */
+}
+
 .avatar {
   width: 30px;
   height: 30px;
@@ -94,14 +154,33 @@
   object-fit: cover; /* 裁剪图片以适应容器 */
   background-color: #fffefe; /* 透明 */
 }
+
+.avatarLight {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%; /* 圆形头像 */
+  object-fit: cover; /* 裁剪图片以适应容器 */
+  background-color: #000000; /* 透明 */
+}
+
 .forwardPostTime {
   font-size: 14px;
   color: #c8c8c8;
 }
 
+.forwardPostTimeLight {
+  font-size: 14px;
+  color: #2c2c2c;
+}
+
 .postTime {
   font-size: 12px;
   color: #c8c8c8;
+}
+
+.postTimeLight {
+  font-size: 12px;
+  color: #2c2c2c;
 }
 
 .forwardUserName {
@@ -125,8 +204,34 @@
   white-space: pre-wrap; /* 保留换行和空格，同时允许自动换行 */
 }
 
+.forwardPostContentLight {
+  color: #000000;
+  font-size: 16px;
+  margin: 16px 16px 16px 16px;
+  text-align: justify;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  line-height: 1.5; /* 设置行高 */
+  overflow-wrap: break-word; /* 保证文本在必要时换行 */
+  white-space: pre-wrap; /* 保留换行和空格，同时允许自动换行 */
+}
+
 .postContent {
   color: #ffffff;
+  font-size: 16px;
+  margin: 16px 16px 16px 24px;
+  text-align: justify;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  line-height: 1.5;
+  overflow-wrap: break-word; /* 保证文本在必要时换行 */
+  white-space: pre-wrap; /* 保留换行和空格，同时允许自动换行 */
+}
+
+.postContentLight {
+  color: #000000;
   font-size: 16px;
   margin: 16px 16px 16px 24px;
   text-align: justify;
@@ -188,15 +293,36 @@
   background-color: #f0f0f0; /* 默认背景色 */
 }
 
+.commentAvatarLight {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%; /* 圆形头像 */
+  object-fit: cover;
+  background-color: #000000; /* 默认背景色 */
+}
+
 .commentUsername {
   font-size: 14px;
   font-weight: bold;
-  color: #333;
+  color: #e8e8e8;
+}
+
+.commentUsernameLight {
+  font-size: 14px;
+  font-weight: bold;
+  color: #000000;
 }
 
 .commentTime {
   font-size: 12px;
-  color: #888;
+  color: #e9e9e9;
+  display: block;
+  margin-top: 5px;
+}
+
+.commentTimeLight {
+  font-size: 12px;
+  color: #000000;
   display: block;
   margin-top: 5px;
 }
@@ -245,7 +371,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   cursor: pointer;
   z-index: 1000;
-  transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out;
+  transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 .scrollToTopButton:hover {
@@ -273,9 +399,10 @@
   margin-top: -1.5rem;
   background: none;
   border: none;
-  color: blue;
+  color: rgb(120, 120, 120);
   cursor: pointer;
 }
+
 .originalPostClamped {
   -webkit-line-clamp: 5;
   text-overflow: ellipsis;
@@ -301,6 +428,15 @@
   opacity: 0.2;
   transform: translateY(-3px);
   margin-left: 8px;
+  color: #fff;
+}
+
+.unContentLight {
+  display: inline-block;
+  opacity: 0.2;
+  transform: translateY(-3px);
+  margin-left: 8px;
+  color: #000000;
 }
 
 .tooltip {
