--- a/frontend/src/components/SideBar.module.css
+++ b/frontend/src/components/SideBar.module.css
@@ -13,8 +13,26 @@
   flex-direction: column;
   justify-content: space-between;
   font-size: larger;
-  transition: background-color 0.3s ease, color 0.3s ease; /* 为 sidebar 添加背景颜色和字体颜色的过渡 */
-  border: solid 5px #333;
+  transition: color 0.3s ease; /* 为 sidebar 添加背景颜色和字体颜色的过渡 */
+  border: solid 3px #333;
+}
+
+.sidebarLight {
+  width: 12%;
+  padding: 20px;
+  margin-left: 15%;
+  margin-right: 1%;
+  background-color: #ffffff;
+  color: #000000;
+  height: 100vh;
+  position: relative;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-size: larger;
+  transition:color 0.3s ease; /* 为 sidebar 添加背景颜色和字体颜色的过渡 */
+  border: solid 3px #dfdfdf;
 }
 
 nav span {
@@ -42,7 +60,6 @@ nav li {
 }
 
 nav a {
-  color: #fff;
   text-decoration: none;
   display: inline-block;
   text-align: left; /* 向左对齐 */
@@ -91,4 +108,11 @@ nav a:hover {
 
   align-items: center;
   justify-content: center;
+}
+
+.bottomSection {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; /* 左对齐 */
+  gap: 15px;
 }
