--- a/frontend/src/components/normalPost_forwardPost/ForwardModal.module.css
+++ b/frontend/src/components/normalPost_forwardPost/ForwardModal.module.css
@@ -11,6 +11,19 @@
   z-index: 1000;
 }
 
+.modalOverlayLight {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(220, 220, 220, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
 .modalContent {
   background: #fff;
   padding: 20px;
@@ -54,6 +67,15 @@
   cursor: auto;
 }
 
+.forwardPostLight {
+  border: 2px solid #dedede;
+  border-radius: 20px;
+  padding: 20px;
+  margin-bottom: 16px;
+  box-shadow: 0 0 8px #000000;
+  cursor: auto;
+}
+
 .post {
   background-color: #5f5f5f;
   border: 2px solid #5f5f5f;
@@ -64,12 +86,21 @@
   cursor: auto;
 }
 
+.postLight {
+  background-color: #dedede;
+  border: 2px solid #e3e3e3;
+  border-radius: 20px;
+  padding: 20px;
+  margin-bottom: 16px;
+  box-shadow: 0 0 8px #e0e0e0;
+  cursor: auto;
+}
+
 .forwardPostHeader {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 8px;
-  color: #000000;
   font-size: 16px;
 }
 
@@ -78,7 +109,6 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 8px;
-  color: #ffffff;
   font-size: 13px;
 }
 
@@ -102,6 +132,7 @@
   object-fit: cover; /* 裁剪图片以适应容器 */
   background-color: #fffefe; /* 透明 */
 }
+
 .avatar {
   width: 30px;
   height: 30px;
@@ -109,14 +140,25 @@
   object-fit: cover; /* 裁剪图片以适应容器 */
   background-color: #fffefe; /* 透明 */
 }
+
 .forwardPostTime {
   font-size: 14px;
   color: #c8c8c8;
 }
 
+.forwardPostTimeLight {
+  font-size: 14px;
+  color: #3a3a3a;
+}
+
 .postTime {
   font-size: 12px;
   color: #c8c8c8;
+}
+
+.postTimeLight {
+  font-size: 12px;
+  color: #3a3a3a;
 }
 
 .forwardUserName {
@@ -128,7 +170,6 @@
 }
 
 .forwardPostContent {
-  color: #000000;
   font-size: 16px;
   margin: 16px 16px 16px 16px;
   text-align: justify;
@@ -141,7 +182,6 @@
 }
 
 .postContent {
-  color: #ffffff;
   font-size: 16px;
   margin: 16px 16px 16px 24px;
   text-align: justify;
@@ -194,7 +234,7 @@
   margin-top: -1.5rem;
   background: none;
   border: none;
-  color: blue;
+  color: rgb(120, 120, 120);
   cursor: pointer;
 }
 .originalPostClamped {
