--- a/frontend/src/components/normalPost_forwardPost/ForwardPost.module.css
+++ b/frontend/src/components/normalPost_forwardPost/ForwardPost.module.css
@@ -7,6 +7,15 @@
   cursor: auto;
 }
 
+.forwardPostLight {
+  border: 2px solid #cbcbcb;
+  border-radius: 20px;
+  padding: 20px;
+  margin-bottom: 16px;
+  box-shadow: 0 0 8px #adadad;
+  cursor: auto;
+}
+
 .post {
   background-color: #5f5f5f;
   border: 2px solid #5f5f5f;
@@ -17,12 +26,21 @@
   cursor: auto;
 }
 
+.postLight {
+  background-color: #dedede;
+  border: 2px solid #e3e3e3;
+  border-radius: 20px;
+  padding: 20px;
+  margin-bottom: 16px;
+  box-shadow: 0 0 8px #e0e0e0;
+  cursor: auto;
+}
+
 .forwardPostHeader {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 8px;
-  color: #ffffff;
   font-size: 16px;
 }
 
@@ -31,7 +49,6 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 8px;
-  color: #ffffff;
   font-size: 13px;
 }
 
@@ -73,9 +90,21 @@
   cursor: default;
 }
 
+.forwardPostTimeLight {
+  font-size: 14px;
+  color: #3a3a3a;
+  cursor: default;
+}
+
 .postTime {
   font-size: 12px;
   color: #c8c8c8;
+  cursor: default;
+}
+
+.postTimeLight {
+  font-size: 12px;
+  color: #3a3a3a;
   cursor: default;
 }
 
@@ -88,7 +117,6 @@
 }
 
 .forwardPostContent {
-  color: #ffffff;
   font-size: 16px;
   margin: 16px 16px 16px 16px;
   text-align: justify;
@@ -101,7 +129,6 @@
 }
 
 .postContent {
-  color: #ffffff;
   font-size: 16px;
   margin: 16px 16px 16px 24px;
   text-align: justify;
@@ -154,13 +181,14 @@
   margin-top: -1.5rem;
   background: none;
   border: none;
-  color: blue;
+  color: rgb(120, 120, 120);
   cursor: pointer;
 }
 .originalPostClamped {
   -webkit-line-clamp: 11;
   text-overflow: ellipsis;
 }
+
 .tooltip {
   position: absolute;
   top: 40px; /* 调整为头像下方 */
