--- a/frontend/src/components/normalPost_forwardPost/NormalPost.module.css
+++ b/frontend/src/components/normalPost_forwardPost/NormalPost.module.css
@@ -7,12 +7,20 @@
   cursor: auto;
 }
 
+.postLight {
+  border: 2px solid #cbcbcb;
+  border-radius: 20px;
+  padding: 20px;
+  margin-bottom: 16px;
+  box-shadow: 0 0 8px #adadad;
+  cursor: auto;
+}
+
 .postHeader {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 8px;
-  color: #ffffff;
   font-size: 16px;
 }
 
@@ -23,6 +31,7 @@
   gap: 8px; /* 用户名和头像之间的间距 */
   cursor: pointer;
 }
+
 .avatar {
   width: 40px;
   height: 40px;
@@ -40,8 +49,14 @@
   color: #c8c8c8;
   cursor: default;
 }
+
+.postTimeLight {
+  font-size: 14px;
+  color: #3a3a3a;
+  cursor: default;
+}
+
 .postContent {
-  color: #ffffff;
   font-size: 16px;
   margin: 16px 16px 16px 24px;
   text-align: justify;
@@ -94,7 +109,7 @@
   margin-top: -1.5rem;
   background: none;
   border: none;
-  color: blue;
+  color: rgb(120, 120, 120);
   cursor: pointer;
 }
 
