--- a/frontend/src/pages/TotalLayout.module.css
+++ b/frontend/src/pages/TotalLayout.module.css
@@ -4,7 +4,20 @@
   align-items: center;
   height: 100vh;
   width: 100vw;
+  background-color: #000;
+  transition: color 0.3s ease
 }
+
+.pageContainerLight {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  background-color:#fff;
+  transition: color 0.3s ease
+}
+
 .homepage {
   border: solid 1px #fff;
 }
@@ -13,6 +26,7 @@
   overflow-y: auto; /* 如果内容过多，添加滚动条 */
   max-width: 100%; /* 防止撑开 */
 }
+
 .search_container {
   height: 100vh;
   width: 100%;
