--- a/frontend/src/components/Search/SearchByEmail.module.css
+++ b/frontend/src/components/Search/SearchByEmail.module.css
@@ -1,6 +1,11 @@
 .container {
   background-color: #1e1e1e;
-  color: #ffffff;
+  padding: 16px;
+  border-radius: 8px;
+}
+
+.containerLight {
+  background-color: #f0f0f0;
   padding: 16px;
   border-radius: 8px;
 }
@@ -16,24 +21,44 @@
   transition: box-shadow 0.2s ease-in-out;
 }
 
+.userCardLight {
+  background-color: #dadada;
+  padding: 12px;
+  margin: 16px 0;
+  border-radius: 6px;
+  display: flex; /* 让内容和按钮横向排列 */
+  align-items: center; /* 垂直居中 */
+  justify-content: space-between; /* 两端对齐 */
+  transition: box-shadow 0.2s ease-in-out;
+}
+
 .userCard:hover {
   box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.1);
+}
+
+.userCardLight:hover {
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
 
 .userInfo {
   display: flex;
   flex-direction: column;
+  color: #b5b5b5;
+}
+
+.userInfoLight {
+  display: flex;
+  flex-direction: column;
+  color: #333333;
 }
 
 .username {
   font-size: 18px;
   font-weight: bold;
-  color: #b3b3b3;
 }
 
 .email {
   font-size: 14px;
-  color: #b0bec5;
 }
 
 .buttonGroup {
@@ -42,8 +67,19 @@
 }
 
 .button {
-  background-color: #545454;
-  color: #ffffff;
+  background-color: #808080;
+  border: none;
+  padding: 6px 12px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 14px;
+  color: #dadada;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.buttonLight {
+  color: #000000;
+  background-color: #b9b9b9;
   border: none;
   padding: 6px 12px;
   border-radius: 4px;
@@ -54,4 +90,7 @@
 
 .button:hover {
   background-color: #626262;
+}
+.buttonLight:hover {
+  background-color: #a0a0a0;
 }
