--- a/frontend/src/components/UserSettings/OwnLikes.module.css
+++ b/frontend/src/components/UserSettings/OwnLikes.module.css
@@ -1,8 +1,18 @@
 .ownPosts {
   padding: 20px;
-  background-color: #8e8e8e;
+  background-color: #1c1c1c;
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.ownPostsLight {
+  padding: 20px;
+  background-color: #ececec;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(255, 255, 255, 0.1);
   height: 100%;
   overflow: hidden;
   position: relative;
@@ -16,12 +26,37 @@
 }
 
 .postItem {
-  background-color: #2b2b2b;
-  border: 1px solid #5a5a5a;
+  background-color: #1c1c1c;
   border-radius: 8px;
   padding: 16px;
   margin-bottom: 16px;
   box-shadow: 0 0px 4px rgba(0, 0, 0, 0.1);
   text-align: center;
-  
+}
+
+.postItemLight {
+  background-color: #eaeaea;
+  border-radius: 8px;
+  padding: 16px;
+  margin-bottom: 16px;
+  box-shadow: 0 0px 4px rgba(255, 255, 255, 0.1);
+  text-align: center;
+}
+
+.noLikes {
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  color: #ffffff;
+  font-size: 16px;
+  margin: 20px 0;
+}
+
+.noLikesLight {
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  color: #000000;
+  font-size: 16px;
+  margin: 20px 0;
 }
