--- a/frontend/src/components/normalPost_forwardPost/ForwardPost.module.css
+++ b/frontend/src/components/normalPost_forwardPost/ForwardPost.module.css
@@ -76,6 +76,7 @@
   object-fit: cover; /* 裁剪图片以适应容器 */
   background-color: #fffefe; /* 透明 */
 }
+
 .avatar {
   width: 30px;
   height: 30px;
@@ -110,10 +111,22 @@
 
 .forwardUserName {
   font-weight: bold;
+  color: #eeeeee;
+}
+
+.forwardUserNameLight {
+  font-weight: bold;
+  color: #000000;
 }
 
 .userName {
   font-weight: bold;
+  color: #eeeeee;
+}
+
+.userNameLight {
+  font-weight: bold;
+  color: #000000;
 }
 
 .forwardPostContent {
@@ -126,6 +139,20 @@
   line-height: 1.5; /* 设置行高 */
   overflow-wrap: break-word; /* 保证文本在必要时换行 */
   white-space: pre-wrap; /* 保留换行和空格，同时允许自动换行 */
+  color: #eeeeee;
+}
+
+.forwardPostContentLight {
+  font-size: 16px;
+  margin: 16px 16px 16px 16px;
+  text-align: justify;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  line-height: 1.5; /* 设置行高 */
+  overflow-wrap: break-word; /* 保证文本在必要时换行 */
+  white-space: pre-wrap; /* 保留换行和空格，同时允许自动换行 */
+  color: #111111;
 }
 
 .postContent {
@@ -138,6 +165,20 @@
   line-height: 1.5;
   overflow-wrap: break-word; /* 保证文本在必要时换行 */
   white-space: pre-wrap; /* 保留换行和空格，同时允许自动换行 */
+  color: #eeeeee;
+}
+
+.postContentLight {
+  font-size: 16px;
+  margin: 16px 16px 16px 24px;
+  text-align: justify;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  line-height: 1.5;
+  overflow-wrap: break-word; /* 保证文本在必要时换行 */
+  white-space: pre-wrap; /* 保留换行和空格，同时允许自动换行 */
+  color: #111111;
 }
 
 .imageGrid {
@@ -155,7 +196,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #000000; /*背景色区分未加载时的样式 */
+  background-color: transparent; /*背景色区分未加载时的样式 */
   border-radius: 8px;
 }
 
@@ -221,7 +262,7 @@
 
 .unContent {
   display: inline-block;
-  opacity: 0.2;
+  opacity: 0.5;
   transform: translateY(-3px);
   margin-left: 8px;
 }
