--- a/frontend/src/pages/TotalLayout.module.css
+++ b/frontend/src/pages/TotalLayout.module.css
@@ -5,7 +5,7 @@
   height: 100vh;
   width: 100vw;
   background-color: #000;
-  transition: color 0.3s ease
+  transition: color 0.3s ease;
 }
 
 .pageContainerLight {
@@ -14,8 +14,8 @@
   align-items: center;
   height: 100vh;
   width: 100vw;
-  background-color:#fff;
-  transition: color 0.3s ease
+  background-color: #fff;
+  transition: color 0.3s ease;
 }
 
 .homepage {
@@ -35,6 +35,19 @@
   scrollbar-width: none;
   -ms-overflow-style: none;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  scroll-behavior: smooth;
+  min-height: 100vh;
+  position: relative;
+}
+
+.search_containerLight {
+  height: 100vh;
+  width: 100%;
+  background-color: #ffffff;
+  overflow-y: auto;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  box-shadow: 0 4px 8px rgba(255, 255, 255, 0.3);
   scroll-behavior: smooth;
   min-height: 100vh;
   position: relative;
@@ -63,8 +76,19 @@
   transition: all 0.3s ease, border-bottom 0.1s ease;
 }
 
+.search_tabLight {
+  font-size: 16px;
+  color: #888;
+  cursor: pointer;
+  transition: all 0.3s ease, border-bottom 0.1s ease;
+}
+
 .search_tab:hover {
   color: white;
+}
+
+.search_tabLight:hover {
+  color: #000;
 }
 
 .search_tab.active {
@@ -72,6 +96,12 @@
   color: rgb(255, 255, 255);
   border-bottom: 3px solid rgb(255, 255, 255);
 }
+.search_tabLight.active {
+  font-weight: bold;
+  color: rgb(0, 0, 0);
+  border-bottom: 3px solid rgb(0, 0, 0);
+}
+
 .search_content {
   top: 20%;
   position: relative;
@@ -103,10 +133,37 @@
   transition: all 0.3s ease;
 }
 
+.search_inputLight {
+  position: absolute;
+  top: 8%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  max-width: 500px;
+  border-radius: 20px;
+  border: none;
+  outline: none;
+  padding: 10px 20px;
+  background-color: #d2d2d2;
+  color: #000000;
+  box-sizing: border-box;
+  font-family: "Noto Sans SC", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 40px;
+  transition: all 0.3s ease;
+}
+
 .search_input:focus {
   padding-top: 20px;
   padding-bottom: 20px;
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+}
+
+.search_inputLight:focus {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .search_input::placeholder {
@@ -115,8 +172,19 @@
   transition: opacity 0.3s ease;
 }
 
+.search_inputLight::placeholder {
+  color: #000000;
+  opacity: 0.3;
+  transition: opacity 0.3s ease;
+}
+
 .search_input:focus::placeholder,
 .search_input:not(:placeholder-shown)::placeholder {
+  opacity: 0;
+}
+
+.search_inputLight:focus::placeholder,
+.search_inputLight:not(:placeholder-shown)::placeholder {
   opacity: 0;
 }
 
@@ -133,8 +201,25 @@
   font-size: 30px;
 }
 
+.clear_buttonLight {
+  position: absolute;
+  right: 60px;
+  top: 8%;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  color: #7a7a7a;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  font-size: 30px;
+}
+
+.clear_buttonLight:hover {
+  color: #454545;
+}
+
 .clear_button:hover {
-  color: #ff8800;
+  color: #d0d0d0;
 }
 
 .search_suggestions {
@@ -157,7 +242,32 @@
   transition: max-height 0.35s ease-in-out, opacity 0.35s ease-in-out;
 }
 
+.search_suggestionsLight {
+  position: absolute;
+  top: calc(8% + 22px); /* 通过动态计算，让建议框在输入框下方 */
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  max-width: 500px;
+  background-color: #d2d2d2;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  z-index: 1;
+  overflow: hidden;
+  max-height: 0;
+  opacity: 0;
+  transition: max-height 0.35s ease-in-out, opacity 0.35s ease-in-out;
+}
+
 .search_suggestions.open {
+  max-height: fit-content;
+  opacity: 1;
+}
+
+.search_suggestionsLight.open {
   max-height: fit-content;
   opacity: 1;
 }
@@ -186,6 +296,12 @@
     max-height: 200px;
     overflow-y: auto;
   }
+
+  .search_suggestionsLight {
+    width: 90%;
+    max-height: 200px;
+    overflow-y: auto;
+  }
 }
 
 body {
@@ -194,6 +310,17 @@ body {
 
 .no_results {
   color: #fff;
+  font-size: 20px;
+  text-align: center;
+  margin-top: 50px;
+  display: flex; /* 使用 Flexbox 居中 */
+  justify-content: center; /* 水平居中 */
+  align-items: center; /* 垂直居中 */
+  height: 50vh; /* 让它占据一定高度，使其更居中 */
+}
+
+.no_resultsLight {
+  color: #a3a3a3;
   font-size: 20px;
   text-align: center;
   margin-top: 50px;
