--- a/frontend/src/components/ConversationApp/ChatWindow.module.css
+++ b/frontend/src/components/ConversationApp/ChatWindow.module.css
@@ -6,6 +6,14 @@
   background-color: #121212; /* 整体深色背景 */
 }
 
+.chatWindowLight {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100%;
+  background-color: #eeeeee; /* 整体深色背景 */
+}
+
 .messages {
   flex: 1;
   overflow-y: auto;
@@ -40,6 +48,12 @@
   color: white;
 }
 
+.otherLight {
+  align-self: flex-start;
+  background-color: #cecece; /* 深灰背景 */
+  color: rgb(0, 0, 0);
+}
+
 /* 时间分割条样式 */
 .timeDivider {
   text-align: center;
@@ -55,6 +69,13 @@
   border-top: 1px solid #333;
 }
 
+.inputAreaLight {
+  display: flex;
+  padding: 10px;
+  background: #e9e9e9; /* 输入区域深色背景 */
+  border-top: 1px solid #cacaca;
+}
+
 .inputArea input {
   flex: 1;
   padding: 10px;
@@ -66,6 +87,17 @@
   color: white; /* 输入文字颜色 */
 }
 
+.inputAreaLight input {
+  flex: 1;
+  padding: 10px;
+  background: #dedede; /* 输入框背景 */
+  border: 1px solid #c0c0c0;
+  border-radius: 5px;
+  font-size: 14px;
+  outline: none;
+  color: rgb(0, 0, 0); /* 输入文字颜色 */
+}
+
 .inputArea button {
   margin-left: 10px;
   padding: 10px 15px;
@@ -74,8 +106,32 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .inputArea button:hover {
   background-color: #5393ff; /* hover 时按钮颜色变亮 */
+}
+
+.inputAreaLight button {
+  margin-left: 10px;
+  padding: 10px 15px;
+  background-color: #2979ff; /* 按钮颜色 */
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.inputAreaLight button:hover {
+  background-color: #5393ff; /* hover 时按钮颜色变亮 */
+}
+
+.bannedNoticeFinal {
+  text-align: center;
+  color: red;
+  font-size: 14px;
+  margin-top: 12px;
+  font-weight: bold;
 }
