--- a/frontend/src/components/ConversationApp/ConversationList.module.css
+++ b/frontend/src/components/ConversationApp/ConversationList.module.css
@@ -11,6 +11,19 @@
   -ms-overflow-style: none; /* IE 10+ */
 }
 
+.conversationListLight {
+  width: 220px;
+  height: 100vh;
+  background-color: #e0e0e0; /* 深色背景 */
+  border-right: 1px solid #cacaca;
+  overflow-y: auto;
+  padding: 10px;
+  box-sizing: border-box;
+  /* 隐藏滚动条 */
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+}
+
 .conversationItem {
   display: flex;
   align-items: center;
@@ -26,6 +39,21 @@
   background-color: #2a2a2a;
 }
 
+.conversationItemLight {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border-bottom: 1px solid #cacaca;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  border-radius: 5px;
+  position: relative;
+}
+
+.conversationItemLight:hover {
+  background-color: #c0c0c0;
+}
+
 .avatar {
   width: 40px;
   height: 40px;
@@ -33,6 +61,7 @@
   margin-right: 10px;
   object-fit: cover;
   background: #fff;
+  border: #1e1e1e solid 1px;
 }
 
 .username {
@@ -43,8 +72,20 @@
   position: absolute;
 }
 
+.usernameLight {
+  font-size: 12px;
+  color: #3e3e3e; /* 灰色 */
+  top: 50%;
+  transform: translateY(-50%);
+  position: absolute;
+}
+
 .selected {
   background-color: #333; /* 选中时的背景 */
+}
+
+.selectedLight {
+  background-color: #bbbbbb; /* 选中时的背景 */
 }
 
 .redDot {
