--- a/frontend/src/components/UserSettings/UserSettings.module.css
+++ b/frontend/src/components/UserSettings/UserSettings.module.css
@@ -12,12 +12,26 @@
   position: relative;
 }
 
+.profile_containerLight {
+  height: 100vh;
+  width: 100%;
+  background-color: #ffffff;
+  border-radius: 10px;
+  overflow-y: auto;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  box-shadow: 0 4px 8px rgba(255, 255, 255, 0.3);
+  scroll-behavior: smooth; /* 平滑滚动 */
+  min-height: 100vh;
+  position: relative;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 20px;
-  border-bottom: 1px solid #333;
+  height: 100px;
 }
 
 .profile_section {
@@ -29,12 +43,32 @@
   background-color: #1a1a1a;
 }
 
+.profile_sectionLight {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  position: relative;
+  background-color: #dadada;
+}
+
 .avatar_container {
   width: 100px;
   height: 100px;
   border-radius: 50%;
   overflow: hidden;
   border: 4px solid #1a1a1a;
+  position: absolute;
+  top: -50px;
+  background-color: #ffffff;
+}
+
+.avatar_containerLight {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 4px solid #c9c9c9;
   position: absolute;
   top: -50px;
   background-color: #ffffff;
@@ -50,6 +84,22 @@
   text-align: center;
   margin-top: 60px;
   color: #ddd;
+}
+
+.profile_infoLight {
+  text-align: center;
+  margin-top: 60px;
+  color: #202020;
+}
+
+.profile_infoLight h2 {
+  font-size: 20px;
+  margin-bottom: 5px;
+}
+
+.profile_infoLight p {
+  font-size: 14px;
+  color: #2d2d2d;
 }
 
 .profile_info h2 {
@@ -91,15 +141,35 @@
   font-size: 16px;
   color: #888;
   cursor: pointer;
-  transition: all 0.3s ease, border-bottom 0.1s ease;
+  transition: all 0.3s ease, border-bottom 0.2s ease;
 }
 
 .tab:hover {
   color: white;
+  font-weight: bold;
 }
 
 .tab.active {
   font-weight: bold;
   color: rgb(255, 255, 255);
   border-bottom: 3px solid rgb(255, 255, 255);
+}
+
+
+.tabLight {
+  font-size: 16px;
+  color: #4c4c4c;
+  cursor: pointer;
+  transition: all 0.3s ease, border-bottom 0.2s ease;
+}
+
+.tabLight:hover {
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+}
+
+.tabLight.active {
+  font-weight: bold;
+  color: rgb(0, 0, 0);
+  border-bottom: 3px solid rgb(0, 0, 0);
 }
